# mineral-classifier-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.sh  docker-compose.yaml  dvc.yaml  entrypoint.sh  generate_dvc.py  params.yaml  pyproject.toml  requirements.txt  run.sh  setup_dvc.py
.devcontainer/: devcontainer.json
configs/: dvc.yaml  params.yaml
results/: .gitignore
results/prediction/: predictions.csv
src/: run_cycle.py
src/models/: __init__.py  gat.py  gcn.py  gnn.py
src/stages/: analyze_cycle_performance.py  analyze_cycles_performance.py  analyze_drift.py  combine_data.py  evaluate.py  generate_base_data.py  generate_pred_data.py  generate_synthetic_data.py  predict.py  prepare_next_cycle_data.py  train.py
src/utilities/: calibration_utils.py  cycles_performance_utils.py  data_utils.py  drift_detection_utils.py  early_stopping.py  eval_utils.py  general_utils.py  logging_utils.py  pred_utils.py  reservoir_sampling.py  train_utils.py  utils.py
